--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li class="p-2 nav-item"><a href="#">Nossos cases</a></li>
                 <li class="p-2 nav-item"><a href="#">Blog</a></li>
                 <li class="p-2 nav-item"><a href="#">Contato</a></li>
-                <li class="p-2 nav-item diagnostico"><a href="#">Diagnostico gratuito<img src="/assets/img/arrow-white.png" alt="seta"></a> </li>
+                <li class="p-2 nav-item diagnostico"><a href="https://poussee.com.br/contato">Diagnostico gratuito<img src="/assets/img/arrow-white.png" alt="seta"></a> </li>
             </ul>
             </div>
             </div>
@@ -52,13 +52,234 @@
           </div>
         </section>
     </header>
+    <main >
+      <section class="solucoes"> 
+        <div class="container">
+          <div class="row pb-5">
+            <div class="col-md-4 col-12 text-left">
+              <p class="subtitle">Soluções</p>
+                <hr>
+                <h1 class="title-content">Como atuamos no desenvolvimento de marcas</h1>
+                <p>Qual é o seu objetivo hoje? Seja qual for, temos uma solução
+                  personalizada para te ajudar a torná-lo realidade. Conheça nossos
+                  serviços e saiba como podemos transformar seus resultados</p>
+            </div>
+            <div class="col-md-8 col-12">
+              <div class="sistemas-boxes">
+                <div class="box" style="background-image: url('/assets/img/full-service.png');">
+                  <h5 class="title">Full service</h5>
+                  <p class="text">De acordo com suas necessidades e metas, desenvolvemos uma
+                    estratégia completa e totalmente customizada, integrando
+                    diferentes soluções em marketing.</p>
+                    <p class="text">
+                      <a href="#" class="btn-green">Saiba mais <img src="/assets/img/arrow-white.png" alt="Seta"></a>
+                    </p>
+                    <div class="overlay-box"></div>
+                </div>
+                <div class="box" style="background-image: url('/assets/img/ecommerce.png');">
+                  <a href="#myTab">
+                  <h5 class="title">E-commerce</h5>
+                  <p class="text">Do desenvolvimento à análise de resultados, atuamos em todas as
+                    etapas para garantir que sua loja virtual alcance excelente
+                    desempenho nas vendas.                    
+                  </p>
+                  </a>
+                  <p class="text">
+                    <a href="#" class="btn-green">Saiba mais <img src="/assets/img/arrow-white.png" alt="Seta"></a></a>
+                  </p>
+                  <div class="overlay-box"></div>
+                </div>
+                <div class="box" style="background-image: url('/assets/img/branding.png');">
+                  <a href="#myTab">
+                  <h5 class="title">Branding</h5>
+                  <p class="text">Com base em seu propósito, desenvolvemos sua estratégia de gestão de marca e criamos uma 
+                    identidade visual única, promovendo o alinhamento em toda a comunicação.</p>
+                  </a>
+                  <p class="text">
+                    <a href="#" class="btn-green">Saiba mais <img src="/assets/img/arrow-white.png" alt="Seta"></a></a>
+                  </p>
+                  <div class="overlay-box"></div>
+                </div>
+                <div class="box" style="background-image: url('/assets/img/social-media.png');">
+                  <a href="#myTab">
+                  <h5 class="title">Social media</h5>
+                  <p class="text">De forma orgânica, fortalecemos sua presença online com conteúdo relevante, 
+                    gerando engajamento e criando relacionamentos com seus clientes atuais e potenciais.
+                  </p>
+                  </a>
+                  <p class="text">
+                    <a href="#" class="btn-green">Saiba mais <img src="/assets/img/arrow-white.png" alt="Seta"></a></a>
+                  </p>
+                  <div class="overlay-box"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row buscando">
+            <div class="col-md-12 col-12 text-left ">
+              <h1>O que você está buscando?</h1>
+            </div>
+            <div class="col-sm"><p>Full Service</p></div>
+            <div class="col-sm"><p>E-commerce</p></div>
+            <div class="col-sm"><p>Branding</p></div>
+            <div class="col-sm"><p>Social media</p></div>
+            <div class="col-sm"><p>Desenvolvimento</p></div>
+            <div class="col-sm"><p>Anúncios patrocinados</p></div>
+            <div class="col-sm"><p>Inbound</p></div>
+            <div class="col-sm"><p>SEO</p></div>
+          </div>
+        </div>
+      </section>
 
-    <section>
+      <section class="marcas">
+        <div class="container">
+          <p class="subtitle">Marcas</p>
+                <hr>
+                <p>que ajudamos a crescer</p>
+          <div class="montadoras logos col-12 text-center">
+            <div class="logo"><img src="/assets/img/logo-bodegamix.png" alt="Logo">
+            </div>
+            <div class="logo"><img src="/assets/img/logo-evolution.png" alt="Logo">
+            </div>
+            <div class="logo"><img src="/assets/img/logo-guimaraes-aranha.png" alt="Logo">
+            </div>
+            <div class="logo"><img src="/assets/img/logo-roge.png" alt="Logo">
+            </div>
+            <div class="logo"><img src="/assets/img/logo-sercom.png" alt="Logo">
+            </div>
+          </div>
+        </div>
+      </section>
 
-    </section>
+      <section class="we-help">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 col-12 foto-quem">
+              <img src="/assets/img/quem-somos.png" alt="Foto quem somos">
+            </div>
+            <div class="col-md-6 col-12">
+              <p class="subtitle">quem somos</p>
+              <h2 class="home-title pt-5">We help brands grow</h2>
+              <p class="home-text">Desde 2017, a Poussée auxilia no crescimento de marcas dos
+                mais diversos segmentos. Com estratégias de marketing de alta
+                performance, elevamos empresas a um novo patamar de sucesso.
+              </p>
+              <p class="home-text pt-5">
+                <a href="#" class="btn-black">Veja mais <img src="/assets/img/arrow-black.png" alt="Seta"></a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
 
+      <section class="equipe">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 col-12 text-equipe">
+              <p class="subtitle">Nossa equipe</p>
+              <h2 class="home-title pt-5">Profissionais em constante evolução</h2>
+              <p class="home-text">Somos um time que não se cansa de aprender e trabalha em
+                conjunto para entregar a melhor performance. Cada um tem
+                especializações distintas e, juntos, fazemos a diferença.
+              </p>
+              <p class="home-text pt-5">
+                <a href="#" class="btn-green">Veja mais <img src="/assets/img/arrow.png" alt="Seta"></a>
+              </p>
+            </div>
+            <div class="col-md-4 col-12 foto-equipe">
+              <img src="/assets/img/equipe-1.png" alt="Foto quem somos">
+            </div>
+            <div class="col-md-4 col-12 foto-equipe">
+              <img src="/assets/img/equipe-2.png" alt="Foto quem somos">
+              <br>
+              <img src="/assets/img/equipe-3.png" alt="Foto quem somos">
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="cases">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 text-center">
+              <p class="subtitle">Cases</p>
+              <hr>
+              <h2 class="home-title">Conheça nossos cases de sucesso</h2>
+            </div>
+          </div>
+          <div class="row cards">
+            <div class="col-md-6 col-12 card-green">
+              <div class="card text-center" >
+                <img src="/assets/img/cart.png" class="card-img-top" alt="Distribuidora">
+                <div class="card-body">
+                  <h5 class="card-title">Distribuidora</h5>
+                  <hr>
+                  <p class="card-text">Como aumentamos em <br><span class="enfase">185% o número</span><br> de usuários de um
+                    e-commerce <br> B2B na Black Friday.</p><br>
+                  <a href="#" class="btn-black">Ver case completo <img src="/assets/img/arrow-black.png" alt="Seta"></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-12 card-black">
+              <div class="card text-center">
+                <img src="/assets/img/telecom.png" class="card-img-top" alt="Telecom">
+                <div class="card-body">
+                  <h5 class="card-title">Telecom</h5>
+                  <hr>
+                  <p class="card-text">Como ajudamos a criar presença digital de empresa de
+                    telecomunicações em <br><span class="enfase">menos de <br> 6 meses</span></p>
+                  <a href="#" class="btn-green">Ver case completo <img src="/assets/img/arrow.png" alt="Seta"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="conquistas">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 col-12">
+              <p class="subtitle">Nossas conquistas</p>
+              <hr>
+              <h2 class="home-title">Somos premiados e reconhecidos</h2>
+              <p class="home-text">
+                <span class="data-title">2020</span><br>
+                Melhor profissional de Gestão de Projetos – Suzana Chiodo
+                Prêmio ABC da Comunicação
+                <br><br>
+                <span class="data-title">2019</span><br>
+                Agência que mais contribuiu com o mercado
+                Prêmio ABC da Comunicação
+              </p>
+            </div>
+            <div class="col-md-6 col-12 foto-quem">
+              <img src="/assets/img/premios.png" alt="Foto prêmios">
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="seja">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 col-12 notebook">
+              <img src="/assets/img/laptop.png" alt="Notebook">
+            </div>
+            <div class="col-md-6 col-12">
+              <p class="subtitle">Seja Poussée</p>
+              <hr>
+              <h2 class="home-title">Veja como podemos levar o seu negócio a outro patamar de
+                sucesso.</h2>
+              <p class="home-text pt-3">
+                <a href="#" class="btn-green">Quero falar com vocês <img src="/assets/img/arrow.png" alt="Seta"></a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     
-
+    </main>
 
     <footer class="footer">
         <div class="container">
@@ -84,27 +305,31 @@
                     <p><a href="#">Contato</a></p>
                   </div>
                 </div>
-                <div class="row text-center pt-5 footer-icons">
-                  <div class="col-sm text-center">
-                    <a href="https://www.facebook.com/agenciapoussee/">
-                    <img src="/assets/img/facebook.png" alt="Facebook">
-                    </a>
-                  </div>
-                  <div class="col-sm text-center">
-                    <a href="https://www.instagram.com/agenciapoussee/">
-                    <img src="/assets/img/intagram.png" alt="Instagram">
-                    </a>
-                  </div>
-                  <div class="col-sm text-center">
-                    <a href="https://www.linkedin.com/company/ag%C3%AAncia-pouss%C3%A9e">
-                    <img src="/assets/img/linkedin.png" alt="LinkedIn">
-                    </a>
-                  </div>
-                  <div class="col-sm text-center">
-                    <a href="https://twitter.com/AgenciaPoussee">
-                    <img src="/assets/img/twitter.png" alt="Twitter">
-                    </a>
-                  </div>
+                <div class="row">
+                  <div class="footer-icons">
+                  <ul>
+                    <li>
+                      <a href="https://www.facebook.com/agenciapoussee/">
+                        <img src="/assets/img/facebook.png" alt="Facebook">
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.instagram.com/agenciapoussee/">
+                        <img src="/assets/img/intagram.png" alt="Instagram">
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.linkedin.com/company/ag%C3%AAncia-pouss%C3%A9e">
+                        <img src="/assets/img/linkedin.png" alt="LinkedIn">
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://twitter.com/AgenciaPoussee">
+                        <img src="/assets/img/twitter.png" alt="Twitter">
+                      </a>
+                    </li>
+                  </ul>
+                </div>
                 </div>
                 <div class="row text-center">
                 <div class="col-12">
