--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Poussée</title>
+    <title>Websites de Alta Performance | Agência Poussée</title>
+    <meta name="description" content="Somos especialistas em Website de alta performance, Gestão de Marcas e Marketing de Resultados. Se você quer vender mais, nós queremos te conhecer.​">
+    <link rel="shortcut icon" href="https://poussee.com.br/assets/img/icon/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/style/style.css">
     <link rel="stylesheet" href="./Content/Plugins/Slick/slick.min.css">
     <link rel="stylesheet" href="./Content/Plugins/Slick/slick-theme.css">
@@ -12,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="shortcut icon" href="./assets/img/favicon.ico">
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
 <body>
@@ -27,12 +30,30 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
             <div class="mr-auto"></div>
-            <ul class="navbar-nav nav justify-content-end">
-                <li class="p-2 nav-item active"><a href="index.html">O que fazemos</a></li>
-                <li class="p-2 nav-item"><a href="#">Quem somos</a></li>
+            <ul class="nav navbar-nav justify-content-end">
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">O que fazemos</a>
+                  <ul class="dropdown-menu">
+                    <li class="p-2 nav-item"><a href="o-que-fazemos/anuncios-patrocinados.html">Anúncios patrocinados</a></li>
+                    <li class="p-2 nav-item"><a href="o-que-fazemos/branding.html">Branding</a></li>
+                    <li class="p-2 nav-item"><a href="o-que-fazemos/desenvolvimento.html">Desenvolvimento</a></li>
+                    <li class="p-2 nav-item"><a href="o-que-fazemos/e-commerce.html">E-commerce</a></li>
+                    <li class="p-2 nav-item"><a href="o-que-fazemos/full-service.html">Full service</a></li>
+                    <li class="p-2 nav-item"><a href="o-que-fazemos/inbound-marketing.html">Inbound Marketing</a></li>
+                    <li class="p-2 nav-item"><a href="o-que-fazemos/seo.html">SEO</a></li>
+                    <li class="p-2 nav-item"><a href="o-que-fazemos/social-media.html">Social Media</a></li>
+                  </ul>
+                </li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Quem somos</a>
+                  <ul class="dropdown-menu">
+                    <li class="p-2 nav-item"><a href="nossa-historia.html">Nossa historia</a></li>
+                    <li class="p-2 nav-item"><a href="nosso-time.html">Nosso time</a></li>
+                  </ul>
+                </li>
                 <li class="p-2 nav-item"><a href="#">Nossos cases</a></li>
                 <li class="p-2 nav-item"><a href="#">Blog</a></li>
-                <li class="p-2 nav-item"><a href="#">Contato</a></li>
+                <li class="p-2 nav-item"><a href="contato.html">Contato</a></li>
                 <li class="p-2 nav-item diagnostico"><a href="https://poussee.com.br/contato">Diagnostico gratuito<img src="/assets/img/arrow-white.png" alt="seta"></a> </li>
             </ul>
             </div>
@@ -45,13 +66,14 @@
             <div class="col-md-12 col-12 text-left text-white">
                 <p class="subtitle">Marketing & Vendas</p>
                 <hr>
-                <h1>O impulso que seu <br> negócio precisa <br> para decolar</h1>
+                <h1 >O impulso que seu <br>negócio precisa <br>para decolar</h1>
                 <a href="#" class="btn-green">Conheça nossas soluções <img src="/assets/img/arrow.png" alt="Seta"></a>
             </div>
           </div>
           </div>
         </section>
     </header>
+    
     <main >
       <section class="solucoes"> 
         <div class="container">
@@ -175,14 +197,14 @@
             </div>
             <div class="list-solutions">
               <ul>
-                <li><a href="#">Full Service</a></li>
-                <li><a href="#">E-commerce</a></li>
-                <li><a href="#">Branding</a></li>
-                <li><a href="#">Social media</a></li>
-                <li><a href="#">Desenvolvimento</a></li>
-                <li><a href="#">Anúncios patrocinados</a></li>
-                <li><a href="#">Inbound</a></li>
-                <li><a href="#">SEO</a></li>
+                <li><a href="o-que-fazemos/full-service.html">Full Service</a></li>
+                <li><a href="o-que-fazemos/e-commerce.html">E-commerce</a></li>
+                <li><a href="o-que-fazemos/branding.html">Branding</a></li>
+                <li><a href="o-que-fazemos/social-media.html">Social media</a></li>
+                <li><a href="o-que-fazemos/desenvolvimento.html">Desenvolvimento</a></li>
+                <li><a href="o-que-fazemos/anuncios-patrocinados.html">Anúncios patrocinados</a></li>
+                <li><a href="o-que-fazemos/inbound-marketing.html">Inbound</a></li>
+                <li><a href="o-que-fazemos/seo.html">SEO</a></li>
               </ul>
             </div>
         </div>
