--- a/nossa-historia.html
+++ b/nossa-historia.html
@@ -54,7 +54,7 @@
                 <li class="p-2 nav-item"><a href="#">Nossos cases</a></li>
                 <li class="p-2 nav-item"><a href="#">Blog</a></li>
                 <li class="p-2 nav-item"><a href="#">Contato</a></li>
-                <li class="p-2 nav-item diagnostico"><a href="https://poussee.com.br/contato">Diagnostico gratuito<img src="./assets/img/arrow-white.png" alt="seta"></a> </li>
+                <li class="p-2 nav-item diagnostico"><a href="https://meusucesso.poussee.com.br/lp-diagnostico-gratuito-01"  target="_blank">Diagnostico gratuito<img src="./assets/img/arrow-white.png" alt="seta"></a> </li>
             </ul>
             </div>
             </div>
@@ -67,7 +67,7 @@
                 <p class="subtitle">Nossa História</p>
                 <hr>
                 <h1 >Uma agência <br> full service de <br> alta performance</h1>
-                <a href="#" class="btn-green">Fale com a gente <img src="/assets/img/arrow.png" alt="Seta"></a>
+                <a href="/contato.html" class="btn-green">Fale com a gente <img src="/assets/img/arrow.png" alt="Seta"></a>
             </div>
           </div>
           </div>
@@ -76,7 +76,7 @@
     <main >
       <section class="nossa-historia"> 
         <div class="container">
-          <div class="row pb-5">
+          <div class="row pb-5" style="align-items: center;">
             <div class="col-md-6 col-12 text-left">
               <p class="subtitle">#WeArePoussée</p>
                 <hr>
