--- a/o-que-fazemos/desenvolvimento.html
+++ b/o-que-fazemos/desenvolvimento.html
@@ -54,7 +54,7 @@
               <li class="p-2 nav-item"><a href="#">Nossos cases</a></li>
               <li class="p-2 nav-item"><a href="#">Blog</a></li>
               <li class="p-2 nav-item"><a href="#">Contato</a></li>
-              <li class="p-2 nav-item diagnostico"><a href="https://poussee.com.br/contato">Diagnostico gratuito<img src="/assets/img/arrow-white.png" alt="seta"></a> </li>
+              <li class="p-2 nav-item diagnostico"><a href="https://meusucesso.poussee.com.br/lp-diagnostico-gratuito-01"  target="_blank">Diagnostico gratuito<img src="/assets/img/arrow-white.png" alt="seta"></a> </li>
             </ul>
             </div>
             </div>
@@ -65,7 +65,7 @@
             <div class="row">
             <div class="col-md-12 col-12 text-left text-white">
                 <h1 class="title-service">Desenvolvimento</h1>
-                <a href="#" class="btn-green">Solicite um orçamento <img src="../assets/img/arrow.png" alt="Seta"></a>
+                <a href="https://api.whatsapp.com/send?phone=5511968864108" target="_blank" class="btn-green">Solicite um orçamento <img src="../assets/img/arrow.png" alt="Seta"></a>
                 <a href="#" class="btn-white">Receba um diagnóstico gratuito <img src="../assets/img/arrow-white.png" alt="Seta"></a>
             </div>
           </div>
@@ -75,7 +75,7 @@
     <main >
       <section class="services-info"> 
         <div class="container">
-          <div class="row pb-5">
+          <div class="row pb-5" style="align-items: center;">
             <div class="col-md-6 col-12 text-left">
               <p class="subtitle">Desenvolvimento</p>
                 <hr>
