--- a/o-que-fazemos/social-media.html
+++ b/o-que-fazemos/social-media.html
@@ -54,7 +54,7 @@
               <li class="p-2 nav-item"><a href="#">Nossos cases</a></li>
               <li class="p-2 nav-item"><a href="#">Blog</a></li>
               <li class="p-2 nav-item"><a href="#">Contato</a></li>
-              <li class="p-2 nav-item diagnostico"><a href="https://poussee.com.br/contato">Diagnostico gratuito<img src="/assets/img/arrow-white.png" alt="seta"></a> </li>
+              <li class="p-2 nav-item diagnostico"><a href="https://meusucesso.poussee.com.br/lp-diagnostico-gratuito-01"  target="_blank">Diagnostico gratuito<img src="/assets/img/arrow-white.png" alt="seta"></a> </li>
             </ul>
             </div>
             </div>
@@ -65,7 +65,7 @@
             <div class="row">
             <div class="col-md-12 col-12 text-left text-white">
                 <h1 class="title-service">Social Media</h1>
-                <a href="#" class="btn-green">Solicite um orçamento <img src="../assets/img/arrow.png" alt="Seta"></a>
+                <a href="https://api.whatsapp.com/send?phone=5511968864108" target="_blank" class="btn-green">Solicite um orçamento <img src="../assets/img/arrow.png" alt="Seta"></a>
                 <a href="#" class="btn-white">Receba um diagnóstico gratuito <img src="../assets/img/arrow-white.png" alt="Seta"></a>
             </div>
           </div>
@@ -75,7 +75,7 @@
     <main >
       <section class="services-info"> 
         <div class="container">
-          <div class="row pb-5">
+          <div class="row pb-5" style="align-items: center;">
             <div class="col-md-6 col-12 text-left">
               <p class="subtitle">Social Media</p>
                 <hr>
@@ -121,39 +121,22 @@
             </div>
           </div>
           <div class="row solution-grid">
-            <div class="col-sm col-12 item-solution">
-              <p class="title-solution">
-                <img src="../assets/img/o-que-fazemos/arrow-diag.png" alt="seta">
-                Conteúdo
-              </p>
-              <p class="text-solution">Produção de textos otimizados para os mecanismos de busca.</p>
-            </div>
-            <div class="col-sm col-12 item-solution">
+             <div class="col-sm col-12 item-solution">
               <p class="title-solution">
                 <img src="../assets/img/o-que-fazemos/arrow-diag.png" alt="seta">
                 Playbook
               </p>
               <p class="text-solution">Desenvolvimento de manual sobre o estilo visual das postagens.</p>
             </div>
-            <div class="col-sm col-12 item-solution">
-              <p class="title-solution">
-                <img src="../assets/img/o-que-fazemos/arrow-diag.png" alt="seta">
-                Testes
-              </p>
-              <p class="text-solution">Análises para encontrar possíveis erros e realizar as correções.
-                </p>
-            </div>
-          </div>
-          <div class="row solution-grid">
+
             <div class="col-sm col-12 item-solution">
               <p class="title-solution">
                 <img src="../assets/img/o-que-fazemos/arrow-diag.png" alt="seta">
                 Conteúdo
               </p>
-              <p class="text-solution">Relatórios
-                Produção de conteúdo alinhado ao tom de voz de sua marca.
-            </p>
+              <p class="text-solution">Produção de conteúdo alinhado ao tom de voz de sua marca.</p>
             </div>
+           
             <div class="col-sm col-12 item-solution">
               <p class="title-solution">
                 <img src="../assets/img/o-que-fazemos/arrow-diag.png" alt="seta">
@@ -163,25 +146,25 @@
                 Criação de peças de acordo com a sua identidade visual.
                 </p>
             </div>
-            <div class="col-sm col-12 item-solution">
+
+          </div>
+          <div class="row solution-grid">
+             <div class="col-sm col-12 item-solution">
                 <p class="title-solution">
                   <img src="../assets/img/o-que-fazemos/arrow-diag.png" alt="seta">
                   Agendamentos
                 </p>
                 <p class="text-solution">
-                    Programação das postagens para a publicação nas datas
-                    definidas.
+                    Programação das postagens para a publicação nas datas definidas.
                   </p>
               </div>
-          </div>
-          <div class="row solution-grid">
+
             <div class="col-sm col-12 item-solution">
               <p class="title-solution">
                 <img src="../assets/img/o-que-fazemos/arrow-diag.png" alt="seta">
                 Análises
               </p>
-              <p class="text-solution">Relatórios
-                Monitoramento dos resultados e criação de relatórios.
+              <p class="text-solution">Monitoramento dos resultados e criação de relatórios.
             </p>
             </div>
           </div>
