Conclusão das tasks = HOME, ANÚNCIOS PATROCINADOS, BRANDING, DESENVOLVIMENTO, E-COMMERCE, FULL SERVICE, SOCIAL MEDIA.

--- a/o-que-fazemos/branding.html
+++ b/o-que-fazemos/branding.html
@@ -54,7 +54,7 @@
               <li class="p-2 nav-item"><a href="#">Nossos cases</a></li>
               <li class="p-2 nav-item"><a href="#">Blog</a></li>
               <li class="p-2 nav-item"><a href="#">Contato</a></li>
-              <li class="p-2 nav-item diagnostico"><a href="https://meusucesso.poussee.com.br/lp-diagnostico-gratuito-01"  target="_blank">Diagnostico gratuito<img src="/assets/img/arrow-white.png" alt="seta"></a> </li>
+              <li class="p-2 nav-item diagnostico"><a href="https://meusucesso.poussee.com.br/lp-diagnostico-gratuito-01"  target="_blank">Diagnostico gratuito<img src="../assets/img/arrow-white.png" alt="seta"></a> </li>
             </ul>
             </div>
             </div>
